--- a/src/main/resources/assets/index.html
+++ b/src/main/resources/assets/index.html
@@ -60,7 +60,7 @@
     <div class="MediaList" style="padding-top: 80px;">
         <div id="UploadBox" class="panel panel-primary">
             <div class="panel-heading">
-                <p>Upload a media file</p>
+                <p>Upload a media file or submit a URL</p>
             </div>
             <div class="panel-body">
 
@@ -103,14 +103,13 @@
                         <tbody class="files"></tbody>
                     </table>
                 </form>
-
-
             </div>
         </div>
-        <div id="Queue">
-            <div class="alert alert-notice" role="alert" id="notice">
-                <p></p>
-            </div>
+        <div class="row alert alert-info" role="alert" id="nowPlaying">
+
+        </div>
+        <div id="Queue" class="row">
+
         </div>
     </div>
 
